--- a/src/resources/postcss/views/skeleton/_single-event.pcss
+++ b/src/resources/postcss/views/skeleton/_single-event.pcss
@@ -216,29 +216,33 @@
 
 	&.primary,
 	&.secondary {
+		margin-bottom: var(--spacer-1);
 		order: 2;
+		padding-top: var(--spacer-5);
+		position: relative;
 		width: 100%;
 		
 		@media (--viewport-medium) {
+			margin-bottom: 0;
+			padding-top: 0;
+			position: static;
 			width: auto;
 		}
 	}
 	
-	&.primary {
-		padding-top: var(--spacer-5);
-		position: relative;
+	&.primary + .event-tickets {
+		margin-top: calc(-1 * var(--spacer-6));
+	}
+	
+	&.secondary {
+		margin-top: 0;
 		
 		@media (--viewport-medium) {
-			padding-top: 0;
-			position: static;
-		}
-		
-		& + .event-tickets {
-			margin-top: calc(-1 * var(--spacer-6));
+			margin-top: var(--spacer-5);
 		}
 	}
 	
-	&:not(.secondary):before {
+	&:before {
 		content: '';
 		position: absolute;
 		left: 0;
@@ -268,7 +272,7 @@
 
 /* Venue block */
 .tribe-events-venue-map {
-	margin: 0 0 var(--spacer-3) 0;
+	margin: 0 0 var(--spacer-5) 0;
 	order: -1;
 	width: 100%;
 	
@@ -280,6 +284,8 @@
 	
 	/* Make sure the gmap div has this specific height on desktop */
 	& > div {
+		max-height: 241px;
+		
 		@media (--viewport-medium) {
 			max-height: 211px;
 		}
